# viewport-editor

./: .gitignore  1-spec-mvp-viewport-editor-mcp-server.md  4-plan-mvp-viewport-editor-mcp-server.md  5-phase-3-file-operations-plus-autosave.md  6-phase-5-integration-tests.md  7-phase-1-server-foundation-plus-viewport-tool.md  8-phase-4-diff-search-and-regex-tools.md  9-phase-2-edit-tool-plus-buffer-model.md  AGENTS.md  CHANGELOG.md  COMPARISON.md  DESIGN.md  LICENSE  README.md  RELEASE_NOTES_v0.3.0.md  XR.md  pyproject.toml  session-ses_155a.md  stress-bug-investigation-mechanical_report.md  stress-final-run-findings_manifest.json  stress-final-run-mechanical_report.md  stress-report-final-run.md  stress-validation-dense-mechanical_report.md  stress-validation-sparse-findings_manifest.json  stress-validation-sparse-mechanical_report.md
048-spec-composite-action-tools-for-agent-intent-matching-read-w/: issue.yaml
050-extend-jump-action-with-top-bottom-symbolic-targets/: comments.yaml  issue.yaml  spec.md
063/: spec.md
1/: issue.yaml  spec.md  state.md
100/: issue.yaml
1010-spec-revise-spec-creation-writing-plans-and-adversarial-audi/: issue.yaml
1048-spec-revise-spec-creation-writing-plans-and-adversarial-audi/: issue.yaml
13/: spec.md  state.md
15/: spec.md  state.md
17/: spec.md  state.md
18/: spec.md  state.md
19/: spec.md  state.md
2/: spec.md  state.md
22/: spec.md  state.md
23/: spec.md  state.md
24/: spec.md  state.md
25/: spec.md  state.md
26/: spec.md  state.md
27/: spec.md  state.md
28/: spec.md  state.md
38/: spec.md  state.md
4/: spec.md  state.md
46/: spec.md  state.yaml
47/: issue.yaml  spec.md  state.yaml
5/: spec.md  state.md
6/: issue.yaml  spec.md  state.md
(+360 files in other folders)
