[project]
name = "viewport-editor"
version = "0.1.0"
description = "An MCP server that gives AI agents a focused, windowed editing experience"
authors = [{ name = "Michael Conrad", email = "m.conrad.202@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["mcp>=1.6.0"]

[project.scripts]
viewport-editor = "viewport_editor:main"

[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/viewport_editor"]
