[project]
name = "viewport-editor"
version = "0.2.0"
description = "MCP server for viewport-based file editing"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "fastmcp>=3.0,<4.0",
]

[project.urls]
Homepage = "https://github.com/michael-conrad/viewport-editor"
Repository = "https://github.com/michael-conrad/viewport-editor"

[project.scripts]
viewport-editor = "viewport_editor.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope = "module"
markers = [
    "phase1: Phase 1 server foundation + viewport tool tests",
    "phase2: Phase 2 edit/buffer/diff tool tests",
    "phase3: Phase 3 file:new and file:save-as tool tests",
    "phase4: Phase 4 diff:apply, search, regex tool tests",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25.0",
]
